[package]
name = "katcp"
version = "0.1.0"
edition = "2021"
rust-version = "1.59.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/GReX-Telescope/katcp"
description = "Proc macros to accompany the katcp packages"
homepage = "https://github.com/GReX-Telescope/katcp"
readme = "README.md"
keywords = ["astronomy", "protocol", "telescope"]
categories = ["encoding","parser-implementations"]


[dependencies]
nom = "7"
chrono = "0.4"
rustc_version = "0.4"

[dependencies.katcp_derive]
path = "katcp_derive"
version = "0.1.0"

[workspace]
members = ["katcp_derive"]
