[package]
name = "katcp"
version = "0.1.5"
edition = "2021"
rust-version = "1.57.0"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/GReX-Telescope/katcp"
description = "An implementation of the KATCP monitor and control protocol"
homepage = "https://github.com/GReX-Telescope/katcp"
readme = "README.md"
keywords = ["astronomy", "protocol", "telescope"]
categories = ["encoding","parser-implementations"]


[dependencies]
nom = "7"
chrono = "0.4"
rustc_version = "0.4"

[dependencies.katcp_derive]
path = "katcp_derive"
version = "0.1.0"

[workspace]
members = ["katcp_derive"]
