[package]
name = "katcp_derive"
version = "0.1.0"
authors = [ "Kiran Shila <me@kiranshila.com>" ]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "An implementation of the KATCP monitor and control protocol"
homepage = "https://github.com/GReX-Telescope/katcp"
repository = "https://github.com/GReX-Telescope/katcp"
readme = "../README.md"
keywords = ["astronomy", "protocol", "telescope"]
categories = ["encoding","parser-implementations"]

[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.5"
