[package]
name = "katcp_derive"
version = "0.1.6"
authors = [ "Kiran Shila <me@kiranshila.com>" ]
edition = "2021"
rust-version = "1.57.0"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/kiranshila/katcp"
description = "Proc macros to accompany the katcp packages"
repository = "https://github.com/kiranshila/katcp"
readme = "../README.md"
keywords = ["astronomy", "protocol", "telescope"]
categories = ["encoding","parser-implementations"]

[lib]
proc_macro = true

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
convert_case = "0.5"
